# chessBot

./: CMakeLists.txt  main.cpp
game_pgns/: Garry Kasparov_vs_Anton Korobov_2021.07.10.pgn  enPassant_mate.pgn  ivanchuk_vs_wolff_1995.pgn  kasparov_vanForeest-2021.pgn  promo_test.pgn
include/: board.hpp  game_manager.hpp  move_validator.hpp  piece.hpp
src/: board.cpp  game_manager.cpp  move_validator.cpp  pgn_replayer.cpp  piece.cpp
tests/: test_gameOver.cpp  test_move_validator.cpp
